[package]
name = "programmingbtc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
num = { version = "0.4.1", features = ["num-bigint", "rand"] }
sha2 = "0.10"
hmac = "0.12.1"
ripemd = "0.1.3"
