[package]
name = "programmingbtc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "create_tx"
path = "src/bins/create_tx.rs"

[[bin]]
name = "download_block_headers"
path = "src/bins/download_block_headers.rs"

[[bin]]
name = "bloom_filter"
path = "src/bins/bloom_filter.rs"

[dependencies]
anyhow = "1.0"
num = { version = "0.4.1", features = ["num-bigint", "rand"] }
reqwest = { version = "0.11.18", features = ["json", "stream", "blocking"] }
sha2 = "0.10"
hmac = "0.12.1"
ripemd = "0.1.3"
hex-literal = "0.4.1"
rand = "0.8.5"
murmur3 = "0.5.2"
